--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,11 +3,10 @@ version: 0.2.0
 description: Mapbox-gl wrapper for Dart. Library to use Mapbox GL JS in your web Dart projects.
 homepage: https://github.com/andrea689/mapbox-gl-dart/
 environment:
-  sdk: ">=2.12.0 <3.0.0"
-
-dependencies:
-  js: ^0.6.3
+  sdk: ">=3.3.0  <4.0.0"
 
 dev_dependencies:
-  build_runner: ">=1.6.2 <2.0.0"
-  build_web_compilers: ">=2.0.0 <3.0.0"
+  build_runner: ">=2.0.0 <3.0.0"
+  build_web_compilers: ">=4.0.0 <5.0.0"
+dependencies:
+  http: ^1.2.1
